crates/plotnik-lib/tests/05-typegen/quantifiers/error_plus_internal_capture_needs_row.txt
Bad = {(identifier) @c}+
==== diagnostics ====
error: the definition names the list itself, so each `+` element — a row of captures — is left without a type name
 --> query.ptk:1:7
  |
1 | Bad = {(identifier) @c}+
  |       ^^^^^^^^^^^^^^^^^^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)+`
